// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": -1000000000000000000n,
    "amount1": 1000000000000000002n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 28,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 59,
    "range_check_builtin_applications": 2255,
    "steps": 44043,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463803656974352706675260n,
  "tick_after": 0n,
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 38,
    "range_check_builtin_applications": 456,
    "steps": 16919,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 38,
    "range_check_builtin_applications": 456,
    "steps": 16912,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -999999999999999998n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 57,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 60,
    "range_check_builtin_applications": 2251,
    "steps": 49077,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463123092240510829748333n,
  "tick_after": -1n,
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": -999999999999999998n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 28,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 59,
    "range_check_builtin_applications": 2199,
    "steps": 43973,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463803656974352706674919n,
  "tick_after": 0n,
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": -999999999999999998n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 28,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 59,
    "range_check_builtin_applications": 2200,
    "steps": 43974,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463803656974352706674919n,
  "tick_after": 0n,
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 79228162514264337593543950336n,
    "amount1": -79228156237163099530060194283n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 84,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 60,
    "range_check_builtin_applications": 2256,
    "steps": 55112,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282339960993932299601503360233022685n,
  "tick_after": -1n,
}
`;

exports[`core > 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 > swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": -79228156237163099530060194283n,
    "amount1": 79228162514264337593543950336n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": 28,
    "ecdsa_builtin_applications": 1,
    "pedersen_builtin_applications": 59,
    "range_check_builtin_applications": 2201,
    "steps": 43976,
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282393880885130614014402098783298475n,
  "tick_after": 0n,
}
`;
